--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Aoife Hayes</title>
   </head>
   <body>
-    <h1>pizza</h1>
+    <h1>Aoife Hayes is a Cork-based curator from Co. Kerry. Her curatorial research's concerns include alternative methodologies of productivity and chronopolitics.
+
+Recent curatorial projects include; host/ghost, co-curated with Glenn Dunlea, St Peter’s Cork; CRUSH, Backwater Artists Group.
+
+Currently completing a Masters of Arts in Arts Management & Creative Producing at University College Cork. Aoife completed her BA Joint Hons in History of Art & French from University College Cork with honours in 2017.
+
+Her ongoing work in retail informs a large part of her practice. 
+
+</h1>
   </body>
 </html>
