--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   
-  <title>Aoife Hayes</title>
+  <title>404 Page not found - Aoife Hayes</title>
 
   
   <meta name="theme-color" />
@@ -78,13 +78,6 @@
 
   
   
-  <link
-    rel="alternate"
-    type="application/rss&#43;xml"
-    href="http://example.org/index.xml"
-    title="Aoife Hayes"
-  />
-  
 
   
   
@@ -95,18 +88,18 @@
   
   
   
-  <meta property="og:title" content="" />
+  <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="http://example.org/404.html" />
 
 
   
-  <meta itemprop="name" content="">
+  <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="">
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
+<meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content=""/>
 
   
@@ -211,22 +204,7 @@
       class="prose prose-neutral relative mx-auto min-h-[calc(100%-10rem)] max-w-3xl px-8 pt-20 pb-32 dark:prose-invert"
     >
       
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
+<h1 class="absolute inset-x-8 top-0 bottom-20 flex items-center justify-center text-9xl">404</h1>
 
     </main>
 
