--- a/practice/index.html
+++ b/practice/index.html
@@ -34,13 +34,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   
-  <title>Aoife Hayes</title>
+  <title>Practice - Aoife Hayes</title>
 
   
   <meta name="theme-color" />
   
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Crush 21st June – 26th April 2022, First Floor Corridor Backwater Artists Group “Having a ‘crush’ is about texture&hellip;My surface gets all uneven, my underneath shows through, things shine up suddenly. It’s like ‘being’ crushed material, but also like wearing it, alternately slithery and itchy” – Elizabeth Freeman
+Crush is an exhibition of work by four Backwater Artists Group studio members that demonstrates a nuance of textures. The exhibition explores everyday life through the materiality of texture, conveying transactions between objects, people, landscapes and labour over time." />
+  <meta name="author" content="Aoife Hayes" />
   
 
   
@@ -51,6 +52,12 @@
   
   <link rel="preload stylesheet" as="style" href="http://example.org/main.min.css" />
 
+  
+  <script
+    defer
+    src="http://example.org/highlight.min.js"
+    onload="hljs.initHighlightingOnLoad();"
+  ></script>
   
 
   
@@ -78,13 +85,6 @@
 
   
   
-  <link
-    rel="alternate"
-    type="application/rss&#43;xml"
-    href="http://example.org/index.xml"
-    title="Aoife Hayes"
-  />
-  
 
   
   
@@ -95,19 +95,24 @@
   
   
   
-  <meta property="og:title" content="" />
-<meta property="og:description" content="" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+  <meta property="og:title" content="Practice" />
+<meta property="og:description" content="Aoife Haye&#39;s practice in art and curating" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="http://example.org/practice/" /><meta property="article:section" content="" />
+
+
 
 
   
-  <meta itemprop="name" content="">
-<meta itemprop="description" content="">
+  <meta itemprop="name" content="Practice">
+<meta itemprop="description" content="Aoife Haye&#39;s practice in art and curating">
+
+<meta itemprop="wordCount" content="251">
+<meta itemprop="keywords" content="" />
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:title" content="Practice"/>
+<meta name="twitter:description" content="Aoife Haye&#39;s practice in art and curating"/>
 
   
   
@@ -212,20 +217,52 @@
     >
       
 
+<article>
+  <header class="mb-20">
+    <h1 class="!my-0 pb-2.5">Practice</h1>
 
+    
+  </header>
 
+  <section><h2 id="crush"><em>Crush</em></h2>
+<h3 id="21st-june--26th-april-2022-first-floor-corridor-backwater-artists-group">21st June – 26th April 2022, First Floor Corridor Backwater Artists Group</h3>
+<p><em>“Having a ‘crush’ is about texture&hellip;My surface gets all uneven, my underneath
+shows through, things shine up suddenly. It’s like ‘being’ crushed material, but
+also like wearing it, alternately slithery and itchy” – Elizabeth Freeman</em></p>
+<p>Crush is an exhibition of work by four Backwater Artists Group studio members that
+demonstrates a nuance of textures. The exhibition explores everyday life through
+the materiality of texture, conveying transactions between objects, people,
+landscapes and labour over time. Texture can be visualised as wear and tear in
+the form of smears, stains and cracks but can also include everyday
+transformations like cooking, gardening, playing pretend or having a crush.</p>
+<p><img src="/image1.jpeg" alt="Crush"></p>
+<h2 id="hostghost"><em>host/ghost</em></h2>
+<h3 id="7th--9th-april-2022-st-peters-cork">7th – 9th April 2022, St Peter’s Cork</h3>
+<p><em>host/ghost</em> is a group exhibition curated by Aoife Hayes and M. Glenn Dunlea as
+part of the MA in Arts Management &amp; Creative Producing programme at the School
+of Film, Music &amp; Theatre, UCC.</p>
+<p><em>host/ghost</em> presents an exhibition of works by four emerging Cork-based
+artists.</p>
+<p>Aoife Hayes commissioned <em>a plan of a plan</em> by
+Lily O’Shea which is an unfinished artwork that is based on the structure of a
+staircase. It is accompanied by a text titled ‘life in a project: a time of no
+time’ which explores the relationship between project work and precarity. The
+research process involved in this work focuses on the pressures surrounding
+creative pursuit and the issue of affording the time and space to maintain a
+sustainable art practice.</p>
+<p><img src="/image2.jpeg" alt="host/ghost"></p>
+</section>
 
+  
+  
 
+  
+  
+  
 
-
-
-
-
-
- 
-
-
-
+  
+  
+</article>
 
 
     </main>
