--- a/rebound/index.html
+++ b/rebound/index.html
@@ -34,13 +34,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   
-  <title>Aoife Hayes</title>
+  <title>Rebound Arts Festival - Aoife Hayes</title>
 
   
   <meta name="theme-color" />
   
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Rebound Arts Festival is a three-day multidisciplinary festival based in Cork City. As we bounce back, Rebound seeks to enliven and reclaim the spaces we inhabit, inspire participants and connect diverse communities across our city" />
+  <meta name="author" content="Aoife Hayes" />
   
 
   
@@ -51,6 +51,12 @@
   
   <link rel="preload stylesheet" as="style" href="http://example.org/main.min.css" />
 
+  
+  <script
+    defer
+    src="http://example.org/highlight.min.js"
+    onload="hljs.initHighlightingOnLoad();"
+  ></script>
   
 
   
@@ -78,13 +84,6 @@
 
   
   
-  <link
-    rel="alternate"
-    type="application/rss&#43;xml"
-    href="http://example.org/index.xml"
-    title="Aoife Hayes"
-  />
-  
 
   
   
@@ -95,19 +94,24 @@
   
   
   
-  <meta property="og:title" content="" />
-<meta property="og:description" content="" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+  <meta property="og:title" content="Rebound Arts Festival" />
+<meta property="og:description" content="A three day multidisclipinary festival in Cork" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="http://example.org/rebound/" /><meta property="article:section" content="" />
+
+
 
 
   
-  <meta itemprop="name" content="">
-<meta itemprop="description" content="">
+  <meta itemprop="name" content="Rebound Arts Festival">
+<meta itemprop="description" content="A three day multidisclipinary festival in Cork">
+
+<meta itemprop="wordCount" content="35">
+<meta itemprop="keywords" content="" />
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:title" content="Rebound Arts Festival"/>
+<meta name="twitter:description" content="A three day multidisclipinary festival in Cork"/>
 
   
   
@@ -212,20 +216,28 @@
     >
       
 
+<article>
+  <header class="mb-20">
+    <h1 class="!my-0 pb-2.5">Rebound Arts Festival</h1>
 
+    
+  </header>
 
+  <section><p><strong>Rebound Arts Festival</strong> is a three-day multidisciplinary festival based in Cork
+City. As we bounce back, <strong>Rebound</strong> seeks to enliven and reclaim the spaces we
+inhabit, inspire participants and connect diverse communities across our city</p>
+</section>
 
+  
+  
 
+  
+  
+  
 
-
-
-
-
-
- 
-
-
-
+  
+  
+</article>
 
 
     </main>
