--- a/rebound/index.html
+++ b/rebound/index.html
@@ -23,6 +23,12 @@
 
 
 
+
+
+
+
+
+
 <html
   class="not-ready text-sm lg:text-base"
   style="--bg: #faf6f1"
@@ -70,6 +76,8 @@
 
   
   
+  
+  <link rel="preload" as="image" href="https://www.gravatar.com/avatar/6e55db16d6174cba5e406f47fd0c7ca3?s=160&amp;d=identicon" />
   
   
 
