--- a/404.html
+++ b/404.html
@@ -190,8 +190,8 @@
       
       <a
         class="block text-center text-2xl leading-[5rem] lg:text-base lg:font-normal"
-        href="/practice/"
-        >Practice</a
+        href="/hostghost/"
+        >host/ghost</a
       >
       
       <a
