--- a/practice/index.html
+++ b/practice/index.html
@@ -202,8 +202,8 @@ Crush is an exhibition of work by four Backwater Artists Group studio members th
       
       <a
         class="block text-center text-2xl leading-[5rem] lg:text-base lg:font-normal"
-        href="/practice/"
-        >Practice</a
+        href="/hostghost/"
+        >host/ghost</a
       >
       
       <a
