--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
       
       <a
         class="block text-center text-2xl leading-[5rem] lg:text-base lg:font-normal"
-        href="/practice/"
-        >Practice</a
+        href="/hostghost/"
+        >host/ghost</a
       >
       
       <a
@@ -230,12 +230,8 @@
 
 
 
+
 <img src="/landingpage.jpeg" width="999" height="675">
-
- 
-
-
-
 
 
     </main>
