--- a/hostghost/index.html
+++ b/hostghost/index.html
@@ -244,7 +244,9 @@ open call process by M. Glenn Dunlea, while a fourth artist was commissioned by
 Aoife Hayes to produce new work in response to a brief.</p>
 <p><em>host/ghost</em> also presented two in-conversation segments with the exhibiting
 artists, and local activist Frank O’Connor, Co-director of the design
-agency anois. Recordings of these segments are available here and here.</p>
+agency anois. Recordings of these segments are available below.</p>
+<p>The <em>host/ghost</em> exhibition booklet can be found
+<a href="/hostghost-booklet.pdf">here</a></p>
 <p>
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/likHZMiAzl8" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
@@ -259,7 +261,7 @@ agency anois. Recordings of these segments are available here and here.</p>
   <iframe src="https://www.youtube.com/embed/83hC8FpyVuU" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 </p>
-<p>The <em>host/ghost</em> exhibition booklet can be found here <a href="">EMPTY LINK!!!</a></p>
+<h2 id="posts">Posts</h2>
 
 
 
@@ -274,7 +276,7 @@ agency anois. Recordings of these segments are available here and here.</p>
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">Exhibition Catalogue</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Exhibition Catalogue</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/hostghost/catalogue/"></a>
 </section>
 
@@ -283,7 +285,7 @@ agency anois. Recordings of these segments are available here and here.</p>
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">Comissioning a plan of a plan</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Comissioning a plan of a plan</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/hostghost/commission/"></a>
 </section>
 
@@ -292,7 +294,7 @@ agency anois. Recordings of these segments are available here and here.</p>
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">Curating a plan of a plan</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Curating a plan of a plan</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/hostghost/curating/"></a>
 </section>
 
@@ -301,7 +303,7 @@ agency anois. Recordings of these segments are available here and here.</p>
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">a plan of a plan and the curatorial</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">a plan of a plan and the curatorial</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/hostghost/curatorial/"></a>
 </section>
 
