--- a/reflections/develop/index.html
+++ b/reflections/develop/index.html
@@ -242,8 +242,8 @@ When setting out to co-produce host/ghost, I was primarily concerned with the ur
     
   </header>
 
-  <section><p><img src="/media/reflection1.jpeg" alt="reflection notes 1">
-<img src="/media/reflection2.jpeg" alt="reflection notes 2"></p>
+  <section><p><img src="/media/reflection1.png" alt="reflection notes 1">
+<img src="/media/reflection2.png" alt="reflection notes 2"></p>
 <p>Reflecting on these initial journal entries now, I am confident that I respected
 the intentions set at the beginning of the academic year. While my core values
 remain the same, my research interests have undergone a transformation. I
