--- a/reflections/index.html
+++ b/reflections/index.html
@@ -236,6 +236,7 @@
 
 
 <p><img src="/media/nappod.png" alt="nap pod"></p>
+<h2 id="posts">Posts</h2>
 
 
 
@@ -246,7 +247,7 @@
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">How Has My Practice Developed</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">How Has My Practice Developed</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/reflections/develop/"></a>
 </section>
 
@@ -255,8 +256,17 @@
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none" id="posts">A Note on Festival</h2>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">A Note on Festival</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/reflections/festivalnote/"></a>
+</section>
+
+
+
+
+
+<section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Gallery</h3>
+  <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/reflections/gallery/"></a>
 </section>
 
 
