--- a/hostghost/catalogue/index.html
+++ b/hostghost/catalogue/index.html
@@ -313,7 +313,7 @@ Lily O&rsquo;Shea</p>
     <a
       class="ml-auto flex w-1/2 items-center justify-end p-6 pl-3 no-underline"
       href="https://aoifehayes-ma-amcp.github.io/hostghost/commission/"
-      ><span>Comissioning a plan of a plan</span><span class="ml-1.5">→</span></a
+      ><span>Commissioning a plan of a plan</span><span class="ml-1.5">→</span></a
     >
     
   </nav>
