--- a/hostghost/index.html
+++ b/hostghost/index.html
@@ -285,7 +285,7 @@ agency anois. Recordings of these segments are available below.</p>
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Comissioning a plan of a plan</h3>
+  <h3 class="!my-0 pb-1 !leading-none" id="wavy">Commissioning a plan of a plan</h3>
   <a class="absolute inset-0" href="https://aoifehayes-ma-amcp.github.io/hostghost/commission/"></a>
 </section>
 
