--- a/rebound/pr/index.html
+++ b/rebound/pr/index.html
@@ -120,7 +120,7 @@ Press Release and Press Pack The creation of a press release required the identi
 PR meetings were held weekly during the 12-week production timeline and more regularly in the lead up to the publication of our press release, press pack and festival launch event.
 Press Release and Press Pack The creation of a press release required the identification of Rebound Arts Festival’s unique selling point.">
 
-<meta itemprop="wordCount" content="322">
+<meta itemprop="wordCount" content="317">
 <meta itemprop="keywords" content="" />
   
   <meta name="twitter:card" content="summary"/>
@@ -259,8 +259,7 @@ Festival’s unique selling point.</p>
 festival, the diversity of cultural backgrounds within the group of producers, a
 primarily female-led production team, our artist-centred vision and our ambition
 to programme 18 events under the umbrella of one festival.</p>
-<p>Click here to see our final press release
-[I will send you PDFs]</p>
+<p>Click <a href="/reboundpressrelease.pdf">here</a> to see our final press release</p>
 <h2 id="press-features">Press Features</h2>
 <ul>
 <li><a href="https://www.ucc.ie/en/media/academic/dramaamptheatrestudies/reboundfestival/ReboundArtsFestivalPressPack.pdf">Press Pack</a></li>
