--- a/reflections/index.html
+++ b/reflections/index.html
@@ -23,12 +23,6 @@
 
 
 
-
-
-
-
-
-
 <html
   class="not-ready text-sm lg:text-base"
   style="--bg: #faf6f1"
@@ -70,8 +64,6 @@
 
   
   
-  
-  <link rel="preload" as="image" href="https://www.gravatar.com/avatar/6e55db16d6174cba5e406f47fd0c7ca3?s=160&amp;d=identicon" />
   
   
 
@@ -235,6 +227,7 @@
 
 
 
+<h1 id="reflections">Reflections</h1>
 <p><img src="/media/nappod.png" alt="nap pod"></p>
 <h2 id="posts">Posts</h2>
 
